@startuml class-diagram

skinparam package {
    BackgroundColor #F9F9F9
    BorderColor #333
    FontColor #333
}
skinparam class {
    BackgroundColor #EFEFEF
    BorderColor #666
    FontColor #222
    ArrowColor #888
}
skinparam note {
    BackgroundColor #FFFBEA
    BorderColor #E1C16E
}

title Diagramme de classes des microservices

package "frontend" #ADD8E6 {
    class Frontend
}

package "auth" #FFDAB9 {
    class Customer
    class Manager
}

package "products" #90EE90 {
    class Product
    class Category
}

package "inventory" #FFB6C1 {
    class InventoryProduct
    class SupplyRequest
}

package "sales" #E6E6FA {
    class Sale
    class SaleItem
    class ShoppingCart
    class ShoppingCartProduct
    class Checkout
}

package "store" #FFFACD {
    class Store
}

Frontend -- Store

Frontend -- Customer
Frontend -- Manager
Customer "1" -- "1" ShoppingCart : "cart_id"
Manager "1" -- "1" Store : "store_id"

Product "0..*" -- "1" Category : "category"
Frontend -- Product
Frontend -- Category

InventoryProduct "1" -- "1" Store : "store_id"
InventoryProduct "1" -- "1" Product : "product_id"
SupplyRequest "1" -- "1" InventoryProduct : "product"
SupplyRequest "1" -- "1" Store : "store_id"
Frontend -- InventoryProduct
Frontend -- SupplyRequest

Sale "1" -- "0..*" SaleItem : "items"
Sale "1" -- "1" Store : "store_id"
SaleItem "1" -- "1" Product : "product_id"
ShoppingCart "1" -- "0..*" ShoppingCartProduct : "products"
ShoppingCart "1" -- "1" Customer : "customer_id"
ShoppingCartProduct "1" -- "1" Product : "product_id"
Checkout "1" -- "1" Customer : "customer_id"
Checkout "1" -- "1" Store : "store_id"
Frontend -- Sale
Frontend -- ShoppingCart
Frontend -- Checkout

@enduml